# cloc-cpp

./: CMakeLists.txt  README.md  common.hpp  fileinfo.hpp  fileparser.cpp  fileparser.hpp  languagestats.hpp  lineparser.cpp  lineparser.hpp  main.cpp
testdata/: test.clj  test.cpp
